# wasmgo

./: Cargo.toml  README.md  justfile
src/: builder.rs  lib.rs  main.rs
