[package]
name = "wasmgo"
version = "0.3.2"
edition = "2021"
authors = ["Kumar Anirudha <wasm@anirudha.dev>"]
description = "Go WebAssembly plugin for Wasmrun - compile Go projects to WebAssembly using TinyGo"
homepage = "https://github.com/anistark/wasmgo"
repository = "https://github.com/anistark/wasmgo"
license = "MIT"
keywords = ["webassembly", "wasm", "go", "tinygo", "wasmrun"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[lib]
name = "wasmgo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasmgo"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
thiserror = "1.0"
clap = { version = "4.5.47", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
tempfile = "3.0"

# Wasm plugin configuration used by Wasmrun
[package.metadata.wasm-plugin]
name = "go"
extensions = ["go"]
entry_files = ["go.mod", "main.go", "cmd/main.go", "app.go"]

[package.metadata.wasm-plugin.capabilities]
supported_languages = ["go", "tinygo"]
compile_wasm = true
compile_webapp = false
live_reload = true
optimization = true
custom_targets = ["wasm"]

[package.metadata.wasm-plugin.dependencies]
tools = ["tinygo", "go"]
